# tidyverse-dashboard2

./: .env.dev  .gitignore  Dockerfile  Makefile  docker-compose.yml  requirements-gcp.txt  requirements.txt
.github/workflows/: update-airflow.yml
airflow/: .gitignore  Dockerfile  airflow.cfg  pyproject.toml
airflow/dags/: dags.py
airflow/dags/demo/: _manifest.json  connect_example.Rmd  connect_second.Rmd  manifest.json  mtcars.py  mtcars_transform.Rmd
airflow/dags/github_extract/: METADATA.yml  download_one.py
airflow/dags/github_extract/download/: METADATA.yml  download.py
airflow/dags/github_transform/: METADATA.yml  dim_event_assigned.sql  dim_event_closed.sql  dim_event_comment_deleted.sql  dim_event_cross_referenced.sql  dim_event_labeled.sql  dim_issue_comments.sql  dim_issue_labels.sql  dim_issues.sql  mtcars.py  mtcars_transform.Rmd  stg_.py  stg_issue_events.sql
airflow/dags/pypi_extract/: METADATA.yml  latest_only.yml  load_file_downloads.sql
airflow/dags/pypi_extract/extract/: extract.sql  extract.yml
airflow/plugins/: tables.py  utils.py
airflow/plugins/airflow_connect/: api.py  connect_operator.py
airflow/plugins/operators/: __init__.py  connect_operator.py  sql_query_operator.py  sql_to_warehouse_operator.py  to_warehouse_operator.py
airflow/plugins/tidypal/: __init__.py  tables.py  utils.py
scripts/config/pip/: pip.conf
tidypal-py/: Makefile  pyproject.toml
tidypal-py/tidypal/: data.py  tables.py  utils.py
tidypal-py/tidypal/tests/: conftest.py  test_data.py  test_utils.py
(+1 files in other folders)
